# ancient_mc

./: .gitignore  CMakeLists.txt  DEPS.txt  README.md  vcpkg.json
res/: block_info.json  block_material.txt  config.json  inventory.json  processes.json  worldgen.json
src/: AABB.h  BlockAttribs.h  BlockInfo.cpp  BlockInfo.h  ConVars.cpp  ConVars.h  GZip.cpp  GZip.h  HitResult.h  Input.cpp  Input.h  Inventory.cpp  Inventory.h  Level.cpp  Level.h  LevelProcesses.cpp  LevelProcesses.h  LevelRenderer.cpp  LevelRenderer.h  Player.cpp  Player.h  main.cpp  read_json.h  rng.h
